Fixed Share fron-end logic on mobile

--- a/app/css/mobile.css
+++ b/app/css/mobile.css
@@ -94,7 +94,8 @@ textarea.mobile-edit {
     -webkit-flex: 0;
 }
 
-.ace_scrollbar {
+.ace_scrollbar,
+.ace_scrollbar-h {
     z-index: 4 !important;
 }
 
